# SE_team5_project

./: CMakeLists.txt  Dockerfile  README.md  build.sh  main.ipynb  main.py  requirements.txt  run.sh  test_main.py
